syntax = "proto3";

package storage;

import "src/protobuf/common/common.proto";
option go_package = "github.com/zikwall/monit/src/protobuf/storage";

message HeatmapMessage {
  string streamID = 1;
  string uniqueID = 2;
  string platform = 3;
  string app = 4;
  string version = 5;
  string OS = 6;
  string browser = 7;
  string country = 8;
  string region = 9;
  string host = 10;
  string userAgent = 11;
}

message MetricMessage {
  string  streamID = 1;
  fixed64 bitrate = 2;
  uint64  frames = 3;
  uint64  height = 4;
  fixed64 fps = 5;
  uint64  bytes = 6;
  fixed64 seconds = 7;
  uint64  keyframeInterval = 8;
}

service Storage {
  rpc WriteHeatmap(HeatmapMessage) returns (common.EmptyResponse) {}
  rpc WriteMetric(MetricMessage) returns (common.EmptyResponse) {}
}